[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Figure.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/ChessBoard.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 299.97, 299.692 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="ScoreDisplay" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 280.0
margin_top = 35.0
margin_right = 360.0
margin_bottom = 49.0
rect_scale = Vector2( 2, 2 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnDisplay" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = 35.0
margin_right = 85.0
margin_bottom = 53.0
rect_scale = Vector2( 2, 2 )
text = "Turn:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" type="Area2D" parent="."]
position = Vector2( 0, 100 )

[node name="Background" type="Sprite" parent="Board"]
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 5 )
normal_map = ExtResource( 5 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board"]
position = Vector2( 300.029, 300.093 )
shape = SubResource( 1 )

[node name="Figure" parent="." instance=ExtResource( 3 )]
visible = false
scale = Vector2( 0.5, 0.5 )

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 470.0
margin_top = 35.0
margin_right = 527.0
margin_bottom = 55.0
rect_scale = Vector2( 2, 2 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Menu" parent="." instance=ExtResource( 1 )]
visible = false
[connection signal="input_event" from="Board" to="." method="_on_Board_input_event"]
[connection signal="input_event" from="Figure" to="." method="_on_Figure_input_event"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
